fix: prevent scrollbar by using 100vh

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
   /*background: color image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
+  margin: 0;
+  overflow: hidden;
 }
 
 body * {
